k3s/redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
spec:
  selector:
    app: redirect
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
