k3s/redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: itamityt.ru
    http:
      paths:

      - path: /rserv
        pathType: Prefix
        backend:
          service:
            name: redirect-service
            port:
              number: 8200
